<resources>
    <string name="app_name">Beer Pal</string>
    <string name="title_activity_main_hub">MainHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="edit_profile">Edit profile</string>

    <string name="card_beer_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="card_beer_name_placeholder">Beer Name</string>
    <string name="card_brewery_placeholder">Brewery</string>
    <string name="card_abv_placeholder">x.x%</string>
    <string name="card_content_description_placeholder">Content Description</string>
    <string name="card_rating_content_description_placeholder">Content Description</string>

    <string name="beer_view_activity_reviews_header">Reviews</string>
    <string name="beer_view_activity_wishlist">Wishlist</string>

    <string name="beer_view_reviews_name_placeholder">JohnSmith123</string>
    <string name="beer_view_reviews_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>