<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_thumbnail"
                android:layout_width="392dp"
                android:layout_height="198dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card_content_description_placeholder"
                android:src="@drawable/beerpal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>

            <TextView
                android:id="@+id/card_title"
                android:layout_width="205dp"
                android:layout_height="40dp"
                android:gravity="center|start"
                android:lines="2"
                android:paddingStart="6dp"
                android:paddingLeft="4dp"
                android:paddingTop="2dp"
                android:paddingEnd="6dp"
                android:text="@string/card_beer_name_placeholder"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/card_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_thumbnail"></TextView>

            <TextView
                android:id="@+id/card_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lines="6"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingEnd="6dp"
                android:text="@string/card_beer_description_placeholder"
                android:textAlignment="textStart"
                android:textColor="#4A4A4A"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_title"></TextView>

            <RatingBar
                android:id="@+id/card_rating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="184dp"
                android:layout_height="40dp"
                android:contentDescription="@string/card_rating_content_description_placeholder"
                android:foregroundGravity="center"
                android:progressTint="#FFC107"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_thumbnail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>